--- a/codegen/templates/api_method.py.j2
+++ b/codegen/templates/api_method.py.j2
@@ -1,10 +1,9 @@
-
 async def {{ method.name }}(self{%- if method.params %}, {% for p in method.params %}{{ p }}: str{% if not loop.last %}, {% endif %}{% endfor %}{%- endif %}) -> {{ method.return_type }}:
     """
     {{ method.description }}
     URL: https://data.ninjakiwi.com{{ method.url }}
     """
-    endpoint = f"{{ method.endpoint_fstring }}"
+    endpoint = f"/{{ method.endpoint_fstring }}"
     body = await self._get_request(endpoint)
 {% if method.model_name == 'Any' %}
     return body
